Benefits section markup

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
               <button class="hero__button button">Try free trial</button>
               <button class="hero__button button button--transparent">
                 <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5833 0.75C25.3265 0.75 32.4167 7.83858 32.4167 16.5833C32.4167 25.3281 25.3265 32.4167 16.5833 32.4167C7.83858 32.4167 0.75 25.3281 0.75 16.5833C0.75 7.83858 7.83858 0.75 16.5833 0.75Z" stroke="#191A15" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M21.5833 16.5752C21.5833 15.2233 14.6542 10.8984 13.8682 11.6761C13.0822 12.4537 13.0066 20.6233 13.8682 21.4742C14.7298 22.3281 21.5833 17.927 21.5833 16.5752Z" stroke="#191A15" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5833 0.75C25.3265 0.75 32.4167 7.83858 32.4167 16.5833C32.4167 25.3281 25.3265 32.4167 16.5833 32.4167C7.83858 32.4167 0.75 25.3281 0.75 16.5833C0.75 7.83858 7.83858 0.75 16.5833 0.75Z" stroke="#191A15" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M21.5833 16.5752C21.5833 15.2233 14.6542 10.8984 13.8682 11.6761C13.0822 12.4537 13.0066 20.6233 13.8682 21.4742C14.7298 22.3281 21.5833 17.927 21.5833 16.5752Z" stroke="#191A15" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 View Demo
               </button>
@@ -370,6 +370,113 @@
                 </article>
               </li>
             </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section container">
+      <div class="section__inner">
+        <div class="benefits">
+          <div class="benefits__body">
+            <h2 class="benefits__title">What Benifit Will You Get</h2>
+            <ul class="benefits__list">
+              <li class="benefits__list-item">
+                <span class="benefits__icon-wrapper">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                  </svg>
+                </span>
+                <span class="benefits__list-item-text">Free Consulting With Experet Saving Money</span>
+              </li>
+
+              <li class="benefits__list-item">
+                <span class="benefits__icon-wrapper">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                  </svg>
+                </span>
+                <span class="benefits__list-item-text">Online Banking</span>
+              </li>
+
+              <li class="benefits__list-item">
+                <span class="benefits__icon-wrapper">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                  </svg>
+                </span>
+                <span class="benefits__list-item-text">Investment Report Every Month</span>
+              </li>
+
+              <li class="benefits__list-item">
+                <span class="benefits__icon-wrapper">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                  </svg>
+                </span>
+                <span class="benefits__list-item-text">Saving Money For The Future</span>
+              </li>
+
+              <li class="benefits__list-item">
+                <span class="benefits__icon-wrapper">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                  </svg>
+                </span>
+                <span class="benefits__list-item-text">Online Transection</span>
+              </li>
+            </ul>
+          </div>
+
+          <div class="benefits__image-block">
+            <div class="benefits__image-elements image-elements">
+              <div class="image-elements__element image-elements__element--first">
+                <img 
+                  src="./images/avatar.svg" 
+                  alt=""
+                  class="image-elements__avatar-image"
+                  loading="lazy"
+                  width="58" height="58">
+                
+                <div class="image-elements__body">
+                  <h4 class="image-elements__name">Amanda Young</h4>
+                  <p class="image-elements__description">Expert Saving Money</p>
+                </div>
+
+                <button class="image-elements__button button button--elipce" type="button">
+                  <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.8333 7.91667C15.8362 9.01656 15.5792 10.1016 15.0833 11.0833C14.4954 12.2598 13.5915 13.2493 12.4729 13.9411C11.3543 14.6328 10.0652 14.9995 8.75001 15C7.65012 15.0029 6.56511 14.7459 5.58334 14.25L0.833344 15.8333L2.41668 11.0833C1.92079 10.1016 1.66381 9.01656 1.66668 7.91667C1.66719 6.60147 2.03385 5.31238 2.72561 4.19379C3.41737 3.07521 4.40689 2.17131 5.58334 1.58334C6.56511 1.08745 7.65012 0.830469 8.75001 0.833337H9.16668C10.9036 0.929163 12.5442 1.6623 13.7743 2.89239C15.0044 4.12247 15.7375 5.76305 15.8333 7.5V7.91667Z" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                </button>
+              </div>
+              <div class="image-elements__element image-elements__element--second">
+                <span class="image-elements__total-income-title">Total Income</span>
+                <div class="image-elements__total-income-price-block">
+                  <span class="image-elements__total-income-price">$245.00</span>
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15 16.6666V8.33325" stroke="#52BD94" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M10 16.6666V3.33325" stroke="#52BD94" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M5 16.6667V11.6667" stroke="#52BD94" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                </div>
+              </div>
+              <div class="image-elements__element image-elements__element--thirt">
+                <span class="image-elements__icon">
+                  <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10.833 0C16.816 0 21.6658 4.85007 21.666 10.833C21.666 16.8161 16.8161 21.666 10.833 21.666C4.85007 21.6658 0 16.816 0 10.833C0.000176534 4.85018 4.85018 0.000176538 10.833 0ZM10.833 1.66602C5.77066 1.66619 1.66619 5.77066 1.66602 10.833C1.66602 15.8955 5.77055 19.9998 10.833 20C15.8956 20 20 15.8956 20 10.833C19.9998 5.77055 15.8955 1.66602 10.833 1.66602ZM16.5527 8.52734L10.7627 14.5273L10.1396 15.1738L9.42969 14.6221L5.21973 11.3496L5.83301 10.5605L6.44629 9.77051L9.94727 12.4922L15.1133 7.13867L16.5527 8.52734Z" fill="#2B9B5B"/>
+                  </svg>
+                </span>
+                <h4 class="image-elements__succeful">Money Transfer Succesfull</h4>
+              </div>
+            </div>
+            <div class="benefits__image-wrapper">
+              <img 
+                src="./images/benefits-image.svg" 
+                alt="" 
+                class="benefits__image"
+                loading="lazy"
+                width="450" height="529">
+            </div>
           </div>
         </div>
       </div>
