--- a/index.html
+++ b/index.html
@@ -482,6 +482,190 @@
         </div>
       </div>
     </section>
+
+    <section class="section container">
+      <div class="section__inner">
+        <div class="plan">
+          <header class="plan__header">
+            <h2 class="plan__title">Choose Plan <br> That’s Right For You</h2>
+            <div class="plan__description">
+              <p>
+                Choose plan that works best for you, feel free to contact us
+              </p>
+            </div>
+            <filedset class="plan__toggle toggle">
+              <legend class="visually-hidden">Billing period</legend>
+
+              <label>
+                <input type="radio" name="billing" value="Monthly">
+                <span>Bil Monthly</span>
+              </label>
+
+              <label>
+                <input type="radio" name="billing" value="Yerly" checked>
+                <span>Bil Yearly</span>
+              </label>
+            </filedset>
+          </header>
+          
+          <div class="plan__body">
+            <ul class="plan__cards">
+              <li class="plan__card plan">
+                <h3 class="plan__title">Free</h3>
+                <div class="plan__description">
+                  <p>
+                    Have a go and test your superpowers
+                  </p>
+                </div>
+
+                <span class="plan__price">0</span>
+
+                <ul class="plan__features-list">
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>2 Users</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>2 Files</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>Public Share & Comments</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>Chat Support</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>New income apps</span>
+                  </li>
+                </ul>
+
+                <button class="plan__button button button--plan">Signup for free</button>
+              </li>
+
+              <li class="plan__card plan plan--recommended">
+                <h3 class="plan__title">Pro</h3>
+                <div class="plan__description">
+                  <p>
+                    Experiment the power of infinite possibilities
+                  </p>
+                </div>
+
+                <span class="plan__price">8</span>
+
+                <span class="plan__save">Save $50 a year</span>
+
+                <ul class="plan__features-list">
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>4 Users</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>All apps</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>Unlimited editable exports</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>Folders and collaboration </span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>All incoming apps</span>
+                  </li>
+                </ul>
+
+                <button class="plan__button button button--plan">Go to pro</button>
+              </li>
+
+              <li class="plan__card plan">
+                <h3 class="plan__title">Business</h3>
+                <div class="plan__description">
+                  <p>
+                    Unveil new superpowers and join the Design Leaque
+                  </p>
+                </div>
+
+                <span class="plan__price">16</span>
+
+                <ul class="plan__features-list">
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>All the features of pro plan</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>Account success Manager</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>Single Sign-On (SSO)</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>Co-conception pogram</span>
+                  </li>
+
+                  <li class="plan__features-list-item">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path class="custom-icon-green" d="M16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16C0 7.16344 7.16344 0 16 0ZM14.8857 17.792L11.5693 14.6357L10.8799 15.3594L10.1904 16.084L14.2246 19.9238L14.9424 20.6074L15.6318 19.8955L21.8379 13.4961L20.4023 12.1035L14.8857 17.792Z" fill="#54BD95"/>
+                    </svg>
+                    <span>Collaboration-Soon</span>
+                  </li>
+                </ul>
+
+                <button class="plan__button button button--plan">Goto Business</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
