--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </div>
     </section>
 
-    <section class="section section--alt-bg">
+    <section class="section section--light-alt-bg">
       <div class="section__inner">
         <div class="advantages container">
           <div class="advantages__body">
@@ -669,6 +669,131 @@
               </li>
             </ul>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section--dark-bg">
+      <div class="section__inner container">
+        <div class="reviews">
+          <div class="reviews__body">
+            <h2 class="reviews__title">People are Saying About DoWhith</h2>
+            <div class="reviews__description">
+              <p>
+                Everything you need to accept to payment and grow your money of manage anywhere on planet
+              </p>
+            </div>
+
+            <blockquote class="reviews__quote quote">
+              <div class="quote__icon">
+                <svg width="45" height="38" viewBox="0 0 45 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path class="custom-icon-gray-alt" d="M11.5 0H21.5L14.5 38H0L11.5 0Z" fill="#D9D9D9"/>
+                  <path class="custom-icon-gray-alt" d="M35 0H45L38 38H23.5L35 0Z" fill="#D9D9D9"/>
+                </svg>
+              </div>
+
+              <p class="quote__text">
+                I am very helped by this E-wallet application , my days are very easy to use this application and its very helpful in my life , even I can pay a short time 😍
+              </p>
+
+              <p class="quote__author">_ Aria Zinanrio</p>
+
+              <div class="quote__accounts">
+                <ul class="quote__accounts-list">
+                  <li class="quote__accounts-list-item">
+                    <img 
+                      src="./images/avatars/1.svg" 
+                      alt="account avatar" 
+                      class="quote__accounts-image"
+                      loading="lazy"
+                      width="66" height="66">
+                  </li>
+
+                  <li class="quote__accounts-list-item">
+                    <img 
+                      src="./images/avatars/2.svg" 
+                      alt="account avatar" 
+                      class="quote__accounts-image"
+                      loading="lazy"
+                      width="66" height="66">
+                  </li>
+
+                  <li class="quote__accounts-list-item">
+                    <img 
+                      src="./images/avatars/3.svg" 
+                      alt="account avatar" 
+                      class="quote__accounts-image"
+                      loading="lazy"
+                      width="66" height="66">
+                  </li>
+
+                  <li class="quote__accounts-list-item">
+                    <img 
+                      src="./images/avatars/4.svg" 
+                      alt="account avatar" 
+                      class="quote__accounts-image"
+                      loading="lazy"
+                      width="66" height="66">
+                  </li>
+
+                  <li class="quote__accounts-list-item">
+                    <button class="quote__button button button--elipce" type="button">
+                      <svg width="66" height="66" viewBox="0 0 66 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="33" cy="33" r="32" stroke="white" stroke-width="2"/>
+                        <path d="M42 33L28.5 43.3923L28.5 22.6077L42 33Z" fill="white"/>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </blockquote>
+          </div>
+
+          <form class="reviews__form get-started">
+            <img 
+              src="./images/icons/get-started-icon.svg" 
+              alt="" 
+              class="get-started__image"
+              loading="lazy"
+              width="72" height="86">
+            
+            <h3 class="get-started__title">Get Started</h3>
+
+            <fieldset class="get-started__form">
+              <legend class="visually-hidden">Get Started Form</legend>
+
+              <div class="get-started__form-body">
+                <div class="get-started__field field">
+                  <label class="field__label" for="email">Name</label>
+                  <input
+                    class="field__input"
+                    id="email"
+                    name="email"
+                    placeholder="Enter your email"
+                    type="email"
+                    required
+                  />
+                </div>
+
+                <div class="get-started__field field">
+                  <label class="field__label" for="message">Message</label>
+                  <textarea 
+                    class="field__input field__input--textarea"
+                    id="message"
+                    name="message"
+                    placeholder="What are you say ?"
+                    required></textarea>
+                </div>
+
+                <button class="get-started__button button" type="submit">Request Demo</button>
+
+                <p class="get-started__free-trial">
+                  <span class="get-started__text-opacity">or</span>
+                  <a href="#" class="get-started__link">Start Free Trial</a>
+                </p>
+              </div>
+            </fieldset>
+          </form>
         </div>
       </div>
     </section>
