--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
       </div>
     </section>
 
-    <section class="section section--dark-bg">
+    <section class="section section--dark-bg section--margin">
       <div class="section__inner container">
         <div class="reviews">
           <div class="reviews__body">
@@ -764,7 +764,7 @@
 
               <div class="get-started__form-body">
                 <div class="get-started__field field">
-                  <label class="field__label" for="email">Name</label>
+                  <label class="field__label" for="email">Email</label>
                   <input
                     class="field__input"
                     id="email"
@@ -798,5 +798,122 @@
       </div>
     </section>
   </main>
+
+  <footer class="footer">
+    <div class="footer__inner container">
+      <div class="footer__top">
+        <div class="footer__brand">
+          <a href="/index.html" class="footer__logo">
+            <img 
+              src="./images/logo.svg" 
+              alt="Biccas"
+              class="logo__image"
+              loading="lazy"
+              width="160" height="30">
+          </a>
+
+          <p class="footer__slogan">Get started noew try our product</p>
+
+          <form class="footer__form">
+            <label class="visually-hidden" for="email">Enter Email</label>
+            <input
+              class="field__input field__input--footer"
+              id="email"
+              name="email"
+              placeholder="Enter your email"
+              type="email"
+              required
+            />
+
+            <button class="footer__button button button--elipce">
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_0_425)">
+                  <path d="M1 8H15" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M8 1L15 8L8 15" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </g>
+                <defs>
+                  <clipPath id="clip0_0_425">
+                  <rect width="16" height="16" fill="white"/>
+                  </clipPath>
+                </defs>
+              </svg>
+            </button>
+          </form>
+        </div>
+        <nav class="footer__navigation">
+          <ul class="footer__list">
+            <p class="footer__list-title">Support</p>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Help centre</a>
+            </li>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Account information</a>
+            </li>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">About</a>
+            </li>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Contact us</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list">
+            <p class="footer__list-title">Help and Solution</p>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Talk to support</a>
+            </li>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Support docs</a>
+            </li>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">System status</a>
+            </li>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Covid responde</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list">
+            <p class="footer__list-title">Product</p>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Update</a>
+            </li>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Security</a>
+            </li>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Beta test</a>
+            </li>
+
+            <li class="footer__list-item">
+              <a href="#" class="footer__list-link">Pricing product</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__copyright">
+          © 2022 Biccas Inc. Copyright and rights reserved
+        </p>
+
+        <p class="footer__links">
+          <a href="#" class="footer__terms-link">Terms and Condtions</a>
+          ·
+          <a href="#" class="footer__privasy-policy-link">Privacy Policy</a>
+        </p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
