--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 
               <li class="plan__card plan-card plan-card--recommended">
                 <h3 class="plan-card__title">Pro</h3>
-                <div class="plan-card__description">
+                <div class="plan-card__description plan-card__description--no-opacity">
                   <p>
                     Experiment the power of infinite possibilities
                   </p>
